<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/title"
        android:textColor="#2B2A2A"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginHorizontal="?attr/listPreferredItemPaddingLeft"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnA"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:text="@string/btnA" />

            <Button
                android:id="@+id/btnB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:text="@string/btnB" />

            <Button
                android:id="@+id/btnC"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:text="@string/btnC" />

            <Button
                android:id="@+id/btnD"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnD" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginHorizontal="?attr/listPreferredItemPaddingLeft"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnE"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:text="@string/btnE" />

            <Button
                android:id="@+id/btnF"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:text="@string/btnF" />

            <Button
                android:id="@+id/btnG"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:text="@string/btnG" />

            <Button
                android:id="@+id/btnH"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnH" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginHorizontal="?attr/listPreferredItemPaddingLeft"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnI"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:text="@string/btnI" />

            <Button
                android:id="@+id/btnJ"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:text="@string/btnJ" />

            <Button
                android:id="@+id/btnK"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:text="@string/btnK" />

            <Button
                android:id="@+id/btnL"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnL" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginHorizontal="?attr/listPreferredItemPaddingLeft"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnM"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:text="@string/btnM" />

            <Button
                android:id="@+id/btnN"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:text="@string/btnN" />

            <Button
                android:id="@+id/btnO"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:text="@string/btnO" />

            <Button
                android:id="@+id/btnP"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnP" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>